--- a/Notebooks/Pandas_Intro.ipynb
+++ b/Notebooks/Pandas_Intro.ipynb
@@ -11,6 +11,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is Pandas?\n",
+    "\n",
+    "[Pandas](https://pandas.pydata.org/) is an open-source library that provides all kinds of easy-to-use data structures and data analysis tools in Python. It's one of the most popular libraries for data analysis, and is used by numerous companies such as [Instacart](https://tech.instacart.com/jardin-a-dataframe-based-orm-for-python-178e02e1c21) and [Twilio/SendGrid](https://sendgrid.com/blog/benefits-of-python-for-marketers/)!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lets create a simple dataframe in Pandas\n",
+    "\n",
+    "A **Dataframe** is a 2d dynamically sized data structure. It has a table structure, where the _data_ is stored in _rows_ and _columns_.\n",
+    "\n",
+    "- If we pass a Python dictionary as the `data` to the Pandas DataFrame input argument, we can creat a Pandas DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -21,15 +41,6 @@
     "df = pd.DataFrame(data= {'name':['john', 'mary', 'peter','jeff','bill', 'lisa'], 'age':[23, 78, 22, 19, 45, 33], \n",
     "                         'state': ['iowa', 'dc', 'california', 'texas', 'washington', 'dc'], 'num_children': [2, 2, 0, 1, 2, 1],\n",
     "                        'num_pets' : [0, 4, 0, 5, 0, 0]})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Lets creat a simple dataframe in Pandas\n",
-    "\n",
-    "- If we pass a Python dictionary as the `data` to the Pandas DataFrame input argument, we can creat a Pandas DataFrame"
    ]
   },
   {
@@ -259,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Select the second to fourth rows based on columns (name and age for example)"
+    "### Select the second through fourth rows based on columns (name and age for example)"
    ]
   },
   {
@@ -596,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Select the first column without specifying the name of column"
+    "### Select the first column without specifying the name of the column"
    ]
   },
   {
@@ -624,6 +635,13 @@
    "source": [
     "# first column of data frame\n",
     "df.iloc[:,0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Select two columns by specifying the names of the columns"
    ]
   },
   {
@@ -912,7 +930,7 @@
     }
    ],
    "source": [
-    "df[df.age> 30]"
+    "df[df.age > 30]"
    ]
   },
   {
@@ -996,7 +1014,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Who in the dataframe is older than 40 and own pets"
+    "### Who in the dataframe is older than 40 AND own pets"
    ]
   },
   {
@@ -1058,6 +1076,13 @@
    "source": [
     "# people older than 40 who own pets\n",
     "df[ (df[\"age\"] > 40) & (df[\"num_pets\"] > 0) ] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Who in the dataframe is older than 40 OR own pets"
    ]
   },
   {
@@ -1142,7 +1167,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Drop age and num_children columns"
+    "### Drop age and num_children columns\n",
+    "\n",
+    "**Note:** a copy of the dataframe will be returned. The original dataframe will **not** be modified by this action"
    ]
   },
   {
@@ -1350,6 +1377,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Provide various descriptive properties of the dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -1458,7 +1492,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What is the average for age, num_pets and num_children"
+    "### What is the average for age, num_pets and num_children\n",
+    "\n",
+    "To do this, we will need the help of [Numpy](https://www.numpy.org/). Numpy is an open-source Python library used for scientific computing and provides the ability to work with high-performance arrays and matrices. Pandas upon funcionality provided by Numpy, so the two are often used together."
    ]
   },
   {
@@ -1696,6 +1732,15 @@
    ],
    "source": [
     "df['age']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apply a function to specific column WITHOUT applying the changes to original dataframe\n",
+    "\n",
+    "**Note:** This does not affect the original dataframe object. This returns a mutated copy of the specified column"
    ]
   },
   {
@@ -2297,6 +2342,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a dataframe from an Ordered Dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -2483,13 +2535,6 @@
    "source": [
     "p"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2508,7 +2553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
