--- a/Notebooks/Pandas_Titanic.ipynb
+++ b/Notebooks/Pandas_Titanic.ipynb
@@ -21,7 +21,6 @@
     "## Learning Objectives\n",
     "\n",
     "- Learn all of the methods in pandas for data-frame manipulation\n",
-    "- The dataset we use is Titanic dataset\n",
     "- Apply visualization to data-frame"
    ]
   },
@@ -29,7 +28,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lets make Pandas dataframe from titanic csv file "
+    "### Lets make a Pandas dataframe from a titanic csv file \n",
+    "\n",
+    "You can download the CSV from [the repo](https://github.com/Make-School-Courses/DS-1.1-Data-Analysis/blob/master/Notebooks/Datasets/titanic.csv) under Notebooks --> Datasets --> titanic.csv"
    ]
   },
   {
@@ -48,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lets look at the first 5 rows of dataframe"
+    "### Lets look at the first 5 rows of the dataframe"
    ]
   },
   {
@@ -1718,7 +1719,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Verify values obtained for pertentage "
+    "### Verify values obtained for percentage "
    ]
   },
   {
@@ -1841,7 +1842,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sometimes it is hard to read values from plot, what are the number of female and male at each Passenger Class"
+    "### Sometimes it is hard to read values from a plot. What are the number of female and male passengers at each Passenger Class?"
    ]
   },
   {
@@ -2088,13 +2089,6 @@
    "source": [
     "sns.heatmap(pd.crosstab(df['Sex'], df['Embarked'], normalize='index'), cmap=\"YlGnBu\", annot=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2113,7 +2107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
