--- a/Notebooks/Pandas_Merge_Cooncate.ipynb
+++ b/Notebooks/Pandas_Merge_Cooncate.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Learning Outcomes\n",
+    "\n",
+    "By the end of this lesson, you should be able to...\n",
+    "\n",
+    "1. Merge or combine data from multiple dataframes in Pandas\n",
+    "1. Concatonate a dataframe with another using Pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Combine Dataset in Pandas \n",
     "\n",
     "- Create two dataframes that have common columns, say ${\\bf x}_1$"
@@ -11,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +89,7 @@
        "2  C   3"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +164,7 @@
        "2  D  T"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +241,7 @@
        "2  C   3  NaN"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +318,7 @@
        "2  D  NaN  T"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +388,7 @@
        "1  B   2  F"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,12 +401,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Another method for above task"
+    "#### Another method for the above task"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +458,7 @@
        "1  B   2  F"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +542,7 @@
        "3  D  NaN    T"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,12 +555,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Appending Pandas dataframe"
+    "### Concatenating Pandas dataframe\n",
+    "\n",
+    "Some quick definitions on **row-wise** vs **column-wise** concatenation:\n",
+    "\n",
+    "- **Row-wise concatenation**: Tables are concatenated at the rows. We now have a table that's _taller_ than it's width. Think of taking the two dataframes and stacking them on top of each other\n",
+    "- **Column-wise concatenation**: Tables are concatenated at the columns. We now have a table that's _wider_ than it's height. Think of the dataframes as blocks, and you're smashing the blocks together so that the left side of one is next to the right side of the other\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -628,19 +646,19 @@
        "2  D  NaN    T"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Append bdf after bdf (row-wise concatination)\n",
+    "# Row-wise concatenation\n",
     "pd.concat([adf, bdf], sort=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -703,19 +721,20 @@
        "2  C   3  D  T"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Column-wise concatination \n",
+    "# Column-wise concatenation \n",
+    "# axis: whether we will concatenate along rows (0) or columns (1)\n",
     "pd.concat([adf, bdf], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +797,7 @@
        "2  C   3  C  T"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +890,7 @@
        "2  C  NaN    T"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,20 +900,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Activity: Correct the indexing after concatenation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/miladtoutounchian/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:2: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "/Users/ianbirnam/anaconda/lib/python3.7/site-packages/ipykernel_launcher.py:2: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
       "of pandas will change to not sort by default.\n",
       "\n",
-      "To accept the future behavior, pass 'sort=True'.\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
       "\n",
-      "To retain the current behavior and silence the warning, pass sort=False\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
       "\n",
       "  \n"
      ]
@@ -976,13 +1002,14 @@
        "5  C  NaN    T"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Correct the indexing after concatination\n",
+    "# Correct the indexing after concatenation\n",
+    "# ignore_index: whether or not the original row labels from should be retained\n",
     "df = pd.concat([adf, cdf], ignore_index=True)\n",
     "df"
    ]
@@ -1153,85 +1180,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Slicing dataframe based on largest value for an specific column"
+    "### Slicing dataframe based on the largest value for a specific column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>a</th>\n",
-       "      <th>b</th>\n",
-       "      <th>c</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11</td>\n",
-       "      <td>c</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10</td>\n",
-       "      <td>b</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8</td>\n",
-       "      <td>d</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    a  b    c\n",
-       "3  11  c  3.0\n",
-       "1  10  b  2.0\n",
-       "2   8  d  NaN"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "df = pd.DataFrame({'a': [1, 10, 8, 11, -1],'b': list('abdce'), 'c': [1.0, 2.0, np.nan, 3.0, 4.0]})\n",
-    "df.nlargest(3, 'a')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1304,18 +1258,94 @@
        "4  -1  e  4.0"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "# initialize a dataframe\n",
+    "df = pd.DataFrame({'a': [1, 10, 8, 11, -1],'b': list('abdce'), 'c': [1.0, 2.0, np.nan, 3.0, 4.0]})\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11</td>\n",
+       "      <td>c</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>b</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>d</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    a  b    c\n",
+       "3  11  c  3.0\n",
+       "1  10  b  2.0\n",
+       "2   8  d  NaN"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Select the three largest values from column 'a'. \n",
+    "# Keep only the values in columns 'b' and 'c' that are in the same row as the 3 largest values in 'a'\n",
+    "df.nlargest(3, 'a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1324,12 +1354,13 @@
        "1"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# calculate the number of null values in column 'c'\n",
     "df['c'].isnull().sum()"
    ]
   },
@@ -1353,7 +1384,26 @@
     }
    ],
    "source": [
+    "# calculate the number of null values in the dataframe\n",
     "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reshape Pandas dataframe with Melt\n",
+    "\n",
+    "While sometimes it's easy for us to read data from a dataframe as a human, it can make it hard to analyze or do operations on. Sometimes in order to perform operations, we need to **reshape** the data first. Reshaping data is a way to restructure how the data is laid out in a dataframe - such as changing what the rows and columns represent - without changing the data itself. \n",
+    "\n",
+    "One way to achieve reshaping is to use the [melt](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.melt.html) method in Pandas. Melt returns a reshaped dataframe based on an input dataframe and values associated to other input parameters. For this example we'll use the following input parameters, but read the [docs on melt](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.melt.html) for more info:\n",
+    "\n",
+    "- `id_vars` - The column(s) to use as identifier variables. This column will remain intact. Anything not specified in `id_vars` will become **unpivoted**. \n",
+    "    - **Unpivot**: transforming multiple column headers into a single variable column, organized into rows. A new column is then created to store their values\n",
+    "- `var_name`- The name to use for the new \"variable\" column\n",
+    "- `value_name`- The name to use for the new \"value\" column\n",
+    "\n",
+    "Let's go over an example:"
    ]
   },
   {
@@ -1362,6 +1412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize the data and dataframe\n",
     "data = {'weekday': [\"Monday\", \"Tuesday\", \"Wednesday\", \n",
     "         \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"],\n",
     "        'Person 1': [12, 6, 5, 8, 11, 6, 4],\n",
@@ -1478,19 +1529,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Reshape Pandas dataframe with Melt"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Reshape Pandas Data With Melt\n",
+    "# the current \"weekday\" column will be our identifier variable\n",
+    "# therefore, \"Person1\", \"Person2\" and \"Person3\" will now all unpivot into rows under a new variable column \"Person\"\n",
+    "# The original value under \"Person#\" will now reside in a new value column called \"Score\"\n",
+    "# Once melted, we'll display the value (Score) for every variable (Person), associating each variable with it's identifier variable (weekday)\n",
     "melted = pd.melt(df, id_vars=[\"weekday\"], \n",
     "                 var_name=\"Person\", value_name=\"Score\")"
    ]
@@ -1692,12 +1740,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 78,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# https://deparkes.co.uk/2016/10/28/reshape-pandas-data-with-melt/"
+    "Source for the above example: https://deparkes.co.uk/2016/10/28/reshape-pandas-data-with-melt/"
    ]
   },
   {
@@ -1710,13 +1756,6 @@
     "\n",
     "- https://github.com/codebasics/py/blob/master/pandas/11_melt/pandas_melt_tutorial.ipynb"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1735,7 +1774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
