added doc links for merge concat notebook

--- a/Notebooks/Pandas_Merge_Cooncate.ipynb
+++ b/Notebooks/Pandas_Merge_Cooncate.ipynb
@@ -177,7 +177,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Merge adf and bdf based on adf"
+    "### Merge adf and bdf based on adf\n",
+    "Documenation for the [merge](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.merge.html) method in Pandas"
    ]
   },
   {
@@ -556,6 +557,8 @@
    "metadata": {},
    "source": [
     "### Concatenating Pandas dataframe\n",
+    "\n",
+    "Documentation for the [concat](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.concat.html) method in Pandas\n",
     "\n",
     "Some quick definitions on **row-wise** vs **column-wise** concatenation:\n",
     "\n",
@@ -1088,7 +1091,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## When two dataframes have exactly the same columns"
+    "## When two dataframes have exactly the same columns\n",
+    "\n",
+    "Documentation for the [append](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.append.html) method in Pandas"
    ]
   },
   {
@@ -1180,7 +1185,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Slicing dataframe based on the largest value for a specific column"
+    "### Slicing dataframe based on the largest value for a specific column\n",
+    "\n",
+    "Documentation for the [nlargest](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.nlargest.html) method in Pandas"
    ]
   },
   {
