clarified tutorialspoint in titanic notebook

--- a/Notebooks/Pandas_Titanic.ipynb
+++ b/Notebooks/Pandas_Titanic.ipynb
@@ -1441,6 +1441,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example of `agg` Method\n",
+    "\n",
+    "Walk through the below example to see how to use the [agg](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.agg.html) method in Pandas. For more information, check out this [Tutorialspoint on groupby and agg](https://www.tutorialspoint.com/python_pandas/python_pandas_groupby.htm)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
