ian edits to applied descriptive statistics

--- a/Notebooks/Applied_Descriptive_Statistics.ipynb
+++ b/Notebooks/Applied_Descriptive_Statistics.ipynb
@@ -6,11 +6,13 @@
    "source": [
     "# Learning Objectives\n",
     "\n",
-    "- At the end of this class, you will be able to write down functions to compute mean, median and mode \n",
+    "At the end of this class, you will be able to...\n",
     "\n",
-    "- You will get what is variance and what it reflects \n",
+    "- Write down functions to compute mean, median and mode \n",
     "\n",
-    "- You be able to express the meaning of percentile"
+    "- Describe variance and what it reflects \n",
+    "\n",
+    "- Express the meaning of percentile"
    ]
   },
   {
@@ -21,7 +23,9 @@
     "\n",
     "- What percent of passengers in Titanic embarked at C?\n",
     "\n",
-    "- What percent of female passengers in Titanic embarked at C?"
+    "- What percent of female passengers in Titanic embarked at C?\n",
+    "\n",
+    "Work on your own, then compare solutions with a neighbor and discuss"
    ]
   },
   {
@@ -45,9 +49,11 @@
    "source": [
     "## Measures of Central Tendency\n",
     "\n",
-    "- In statistics, we often find that describing data by \"averages\" allows us to more often make more powerful assertions regarding the data as a whole. \n",
+    "A [**Central Tendency**](https://en.wikipedia.org/wiki/Central_tendency) is a central (typical) value for a probability distribution\n",
     "\n",
-    "- We often use **three key measures of central tendency** to help describe the centroid (arithmetic mean trend across a distribution) of our data:\n",
+    "- In statistics, we often find that describing data by _averages_ allows us to more often make more powerful assertions regarding the data as a whole. \n",
+    "\n",
+    "- We often use **three key measures of central tendency** to help describe the **centroid** (arithmetic mean trend across a distribution) of our data:\n",
     "    - **Mean**\n",
     "    - **Median**\n",
     "    - **Mode**"
@@ -73,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +88,7 @@
        "4.391304347826087"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,12 +113,14 @@
    "source": [
     "## Activity (Titanic):\n",
     "\n",
-    "- What is the average age of male passengers that survived?"
+    "- What is the average age of male passengers that survived?\n",
+    "\n",
+    "Once you've found the average, talk with a neighbor who has also found the average, and compare how you each came about to your solution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +137,7 @@
     "# Solutions:\n",
     "\n",
     "import pandas as pd\n",
-    "df = pd.read_csv('../Pandas/titanic.csv')\n",
+    "df = pd.read_csv('Datasets/titanic.csv')\n",
     "\n",
     "    \n",
     "print(df[(df['Survived'] == 1) & (df['Sex'] == 'male')]['Age'].mean())\n",
@@ -149,11 +157,11 @@
    "source": [
     "### The median is the \"middle value\" or midpoint across our data.\n",
     "\n",
-    "Determining the median is as simple as it sounds: _ascertain the data value lying in the exact middle of our dataset_.\n",
+    "Determining the median is as simple as it sounds: _find the data value lying in the exact middle of our dataset_.\n",
     "\n",
-    "One critical exception occurs when our data has an even number of values and thus has **two values** at its center: _in these cases, ascertain the **mean** value of the two medians to obtain the true median across our data_. \n",
+    "One critical exception occurs when our data has an even number of values and thus has **two values** at its center: _in these cases, find the **mean** value of the two medians to obtain the true median across our data_. \n",
     "\n",
-    "And remember: the median can only be calculated across _sorted data_!\n",
+    "**Remember:** the median can only be calculated across _sorted data_!\n",
     "\n",
     "If data is distributed in a non-normal manner, then we can learn a great deal from interpreting what the exact median value of our dataset is. "
    ]
@@ -162,7 +170,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Activity: _Write a function to compute the median from an arbitrary dataset._"
+    "### Activity: _Write a function to compute the median from an arbitrary dataset._\n",
+    "\n",
+    "Once you write the function, compare with a neighbor's implementation"
    ]
   },
   {
@@ -202,14 +212,16 @@
     "\n",
     "Remember that if all values across our data are unique and only occur once, then our data **has no mode**!\n",
     "\n",
-    "The mode is also an interesting measure of central tendency in that it can be applied towards categorical (non-numerical) data; one can find frequently occurring categories without running any calculations. "
+    "The mode is also an interesting measure of _central tendency_ in that it can be applied towards categorical (non-numerical) data; one can find frequently occurring categories without running any calculations. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Activity: _Write a function to compute the mode from an arbitrary dataset._"
+    "### Activity: _Write a function to compute the mode from an arbitrary dataset._\n",
+    "\n",
+    "Once you write the function, compare with a neighbor's implementation"
    ]
   },
   {
@@ -260,16 +272,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## What is Range?\n",
+    "\n",
+    "**Range** is the difference between the highest and lowest values in a data set. It is one of the simplest measures of **spread** (the extent to which a distribution is stretched or squeezed). We'll use variance/standard deviation to help give more information around all of this!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## What is standard deviation or variance?\n",
     "\n",
-    "Lets learn it by example:\n",
+    "Let's learn it by example:\n",
     "    \n",
-    "- We measured number of rainy days at fall in three different cities in last 5 years:"
+    "- We measured the number of rainy days during Fall in three different cities in the last 5 years:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +417,7 @@
        "14     32  City_C"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -446,12 +467,14 @@
    "source": [
     "## Which city has more variation?\n",
     "\n",
-    "Varinace or its square root which is standard deviation (std) can capture variations in different arrays"
+    "**Standard deviation (std), which is the square root of variance,** can capture the variations in different arrays\n",
+    "\n",
+    "[Docs on the std function](https://docs.scipy.org/doc/numpy/reference/generated/numpy.std.html) from Numpy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -469,14 +492,14 @@
     "\n",
     "print(np.std(df[df['City'] == 'City_B']['Rainy']))\n",
     "\n",
-    "print(np.std(df[df['City'] == 'City_A']['Rainy']))"
+    "print(np.std(df[df['City'] == 'City_C']['Rainy']))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lets plot data such that variations being seen"
+    "## Let's plot the variations in the data"
    ]
   },
   {
@@ -537,15 +560,21 @@
    "source": [
     "# Percentile\n",
     "\n",
-    "## Compute 75 percent Percentile for Fare in Titanic\n",
+    "## Activity - Compute 75% Percentile for Fare in Titanic\n",
     "We want to compute:\n",
     "\n",
-    "- At which amount of Dollar, 75 percent of passengers paid less than amount?"
+    "- At which dollar amount did 75 percent of the passengers pay less than the Fare amount?\n",
+    "\n",
+    "How would we do this?\n",
+    "\n",
+    "**Hint:** Use Numpy's [percentile](https://docs.scipy.org/doc/numpy/reference/generated/numpy.percentile.html) function\n",
+    "\n",
+    "When you're done, compare implementations with a neighbor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -554,14 +583,14 @@
        "31.0"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('../Pandas/titanic.csv')\n",
+    "df = pd.read_csv('Datasets/titanic.csv')\n",
     "\n",
     "ls_fare = df['Fare'].dropna().values\n",
     "\n",
@@ -618,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
